--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
     <link rel="stylesheet" href="src/css/default/default_style.css">
     <link rel="stylesheet" href="src/css/default/default_responsive.css">
     <!-- Script JS -->
-    <script src="../src/js/btn-menu-mobile.js" defer></script>
+    <script src="src/js/btn-menu-mobile.js" defer></script>
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js" defer></script>
-    <script src="../src/js/script.js" defer></script>
+    <script src="src/js/script.js" defer></script>
     <!-- /Script JS -->
     <title>Início - Frota Martins</title>
 </head>
