--- a/html/contact.html
+++ b/html/contact.html
@@ -62,7 +62,7 @@
     <main>
         <section class="cntt">
             <div class="container">
-                <form method="post" action="../src/php/send.php">
+                <form action="">
                     <div class="form-txt">
                         <span>Solicite contato</span>
                         <p>Preencha os dados abaixo que entraremos em contato com você</p>
